<resources>
    <string name="app_name">SmartEnvironment</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="signUp">Sign up</string>
    <string name="register_new_account">Register New Account</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="agree_terms_and_conditions">Accept Terms and Conditions</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="please_insert_all_fields">Please insert all fields</string>
    <string name="account_successfully_created">Account Successfully Created</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="title_activity_forgot_login">Forgot your Password?</string>
    <string name="RetrievePassword">Retrieve Password</string>
    <string name="goBackLogin">Login</string>
    <string name="noInternetConnection">No Internet Connection</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string-array name="side_bar_option">
        <item>Monitor</item>
        <item>Control</item>
        <item>Profile</item>
        <item>About</item>
        <item>Log out</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
